--- a/static/css/StyleSplah.css
+++ b/static/css/StyleSplah.css
@@ -1,21 +1,41 @@
+.body body{
+  display: grid;
+  place-items: center;
+}
+.contenedor{
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+.logo{
+  width: 700px;
+  height: 250px;
+
+
+} 
  .loading svg polyline {
     fill: none;
-    stroke-width: 3;
+    stroke-width: 5;
     stroke-linecap: round;
     stroke-linejoin: round;
   }
   
+  .loading{
+    margin-left: 150px;
+  }
   .loading svg polyline#back {
     fill: none;
-    stroke: #ff4d5033;
+    stroke: #0d7dfd33;
   }
   
   .loading svg polyline#front {
+  
     fill: none;
-    stroke: #ff4d4f;
-    stroke-dasharray: 48, 144;
-    stroke-dashoffset: 192;
-    animation: dash_682 1.4s linear infinite;
+    stroke: #d8ff4d;
+    stroke-dasharray: 250, 260;
+    stroke-dashoffset: 340;
+    animation: dash_682 1.1s linear infinite;
   }
   
   @keyframes dash_682 {
@@ -26,5 +46,5 @@
     to {
       stroke-dashoffset: 0;
     }
-  }
+  }  
   
